--- a/src/index.html
+++ b/src/index.html
@@ -7,56 +7,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="http://cdn.robotwebtools.org/ros3djs/current/ros3d.js"></script>
-  <script src="http://cdn.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="text/javascript" src="http://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
-  <script type="text/javascript" src="http://static.robotwebtools.org/ros3djs/current/ros3d.min.js"></script>
-  <script type="text/javascript" type="text/javascript">
-    /**
-     * Setup all visualization elements when the page is loaded.
-     */
-    function init() {
-      // Connect to ROS.
-      var ros = new ROSLIB.Ros({
-        url: 'ws://localhost:9090'
-
-      });
-
-      // Create the main viewer.
-      var viewer = new ROS3D.Viewer({
-        divID: 'map',
-        width: 1100,
-        height: 750,
-        antialias: true
-      });
-
-      // Add a grid.
-      viewer.addObject(new ROS3D.Grid());
-
-      // Setup a client to listen to TFs.
-      var tfClient = new ROSLIB.TFClient({
-        ros: ros,
-        angularThres: 0.01,
-        transThres: 0.01,
-        rate: 10.0
-      });
-
-      // Setup the URDF client.
-      var urdfClient = new ROS3D.UrdfClient({
-        ros: ros,
-        tfClient: tfClient,
-        path: 'http://resources.robotwebtools.org/',
-        rootObject: viewer.scene,
-        loader: ROS3D.COLLADA_LOADER_2
-      });
-
-    }
-  </script>
 </head>
 
-<body class="mat-typography" onload="init()">
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 
