Fix bug introduced in ba55fa5

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lidar Prototype</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Mobile Temple CSS -->
   <!--<link href="mobile/mobile.css" rel="stylesheet">-->
   <!-- Updating -->
